src/objects/HR_Training_Course__c.object
<CustomObject>
    <fields>
        <fullName>Course_Cost__c</fullName>
        <label>Course Cost</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Course_Result__c</fullName>
        <label>Course Result</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bps Certificate In P</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HR-Training Courses</relationshipLabel>
        <relationshipName>HR_Training_Courses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>HR-Training Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee__c</columns>
        <columns>Course__c</columns>
        <columns>Course_Cost__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Duration__c</columns>
        <columns>Course_Result__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TRN-{0000}</displayFormat>
        <label>Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HR-Training Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>